version/0.8/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.8.0 <https://github.com/ansys/pyaedt-toolkits-antenna/releases/tag/v0.8.0>`_ - May 20, 2025
==============================================================================================

.. tab-set::


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump actions/download-artifact from 4.1.9 to 4.3.0
          - `#330 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/330>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Update v0.8.dev0
          - `#320 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/320>`_

        * - update CHANGELOG for v0.7.1
          - `#325 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/325>`_

        * - Fix codecov job
          - `#327 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/327>`_

        * - Update CICD to Python 3.12
          - `#328 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/328>`_


`0.7.1 <https://github.com/ansys/pyaedt-toolkits-antenna/releases/tag/v0.7.1>`_ - May 08, 2025
==============================================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Upload artifacts
          - `#318 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/318>`_

        * - Fix release artifacts
          - `#323 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/323>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - update CHANGELOG for v0.6.0
          - `#317 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/317>`_

        * - Fix release process
          - `#321 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/321>`_


`0.6.0 <https://github.com/ansys/pyaedt-toolkits-antenna/releases/tag/v0.6.0>`_ - May 06, 2025
==============================================================================================

.. tab-set::


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump codecov/codecov-action from 4 to 5
          - `#315 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/315>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Add Changelog
          - `#314 <https://github.com/ansys/pyaedt-toolkits-antenna/pull/314>`_


.. vale on